--- a/package.json
+++ b/package.json
@@ -10,5 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "@linclark/pkg": "^1.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cicio/fcc-nodejs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cicio/fcc-nodejs/issues"
+  },
+  "homepage": "https://github.com/cicio/fcc-nodejs#readme",
+  "devDependencies": {}
 }
