--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cicio/fcc-nodejs.git"
+    "url": "https://github.com/cicio/fcc-nodejs.git"
   },
   "bugs": {
     "url": "https://github.com/cicio/fcc-nodejs/issues"
