--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "author": "Miguel W. Cruz",
   "license": "ISC",
-  "dependencies": {
-    "@linclark/pkg": "^1.0.3"
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/cicio/fcc-nodejs.git"
